# llmkit

./: .gitignore  DEVELOPER_GUIDE.md  LICENSE  MANIFEST.in  README.md  USER_GUIDE.md  pyproject.toml  run_compare.py  run_tool_calling.py
llmkit/: __init__.py  run.py
llmkit/adapters/: __init__.py  base.py
llmkit/adapters/anthropic/: __init__.py  adapter.py
llmkit/adapters/gemini/: __init__.py  adapter.py
llmkit/adapters/ollama/: __init__.py  adapter.py
llmkit/adapters/openai/: __init__.py  adapter.py
llmkit/core/: __init__.py  client.py  cost.py  error_map.py  errors.py  retry.py  router.py  types.py
tests/: test_anthropic_adapter.py  test_gemini_adapter.py  test_ollama_adapter.py  test_openai_adapter.py  test_resilience.py  test_router.py
